# ocr-research

actions/: UPDATED_DEMO_TASKS.md  prompt.md  prompt2.md
docs/: easyocr_executive_summary.json  index.html  paddleocr_executive_summary.json
docs/demos/task-1/: easyocr_ocr_processing_report_20250829_101452.html  easyocr_results_summary_20250829_101452.csv  index.html  paddleocr_ocr_processing_report_20250829_100521.html  paddleocr_results_summary_20250829_100521.csv
research/claude/: OCR_Research_2025.md
research/gemini-25-pro/: prompt.md  research.md
research/gpt-5/: research.md
scripts/: install-hooks.sh  pre-push-hook.sh  test_links.py  update_github_pages.py
synthesis/: CONSENSUS_REPORT.md  prompt.md
tasks/task-1/: CODE_REVIEW.md  FIX_IMPLEMENTATION_PLAN.md  prompt.md  prompt10.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md  prompt6.md  prompt7.md  prompt8.md  prompt9.md  prompts.md  to-do.md
tasks/task-1/demo/: .gitignore  README.md  all_prompts.md  batch_processing_demo.py  config.yaml  main.py  pyproject.toml  test_batch_processing.py  test_dataset_loader.py  test_models.py  test_simple_paddle.py
tasks/task-1/demo/configs/: cpu_config.yaml  gpu_config.yaml  mps_config.yaml
tasks/task-1/demo/results/: complete_results.json  executive_summary.json
tasks/task-1/demo/results/easyocr/: complete_results.json  gpu_benchmark_20250829_115016.json
tasks/task-1/demo/results/easyocr/reports/: easyocr_mps_performance_20250829_152803.html  easyocr_ocr_processing_report_20250829_101452.html
tasks/task-1/demo/results/paddleocr/: complete_results.json
tasks/task-1/demo/results/paddleocr/reports/: paddleocr_ocr_processing_report_20250829_100521.html
tasks/task-1/demo/results/reports/: ocr_processing_report_20250827_134500.html  results_summary_20250827_134500.csv
tasks/task-1/demo/src/batch_processor/: batch_processor.py
tasks/task-1/demo/src/models/: base_model.py  easyocr_model.py  paddleocr_model.py  paddleocr_simple.py
tasks/task-1/demo/src/pipeline/: __init__.py  image_transform_pipeline.py  ocr_reader.py  pipeline_coordinator.py
tasks/task-1/demo/src/utils/: config_manager.py  cost_analysis.py  dataset_loader.py  error_handling.py  evaluation.py  gpu_monitoring.py  gpu_report_generator.py  image_processing.py  monitoring.py  reporting.py
